--- a/technical_NEB.html
+++ b/technical_NEB.html
@@ -9,7 +9,8 @@
     <body>
     <strong>Privacy Policy</strong> <p>
                   Sohel built the Technical NEB 9 - 12 app as
-                  an Ad Supported app. This SERVICE is provided by
+<!--                   an Ad Supported app. -->  a Free app.
+                  This SERVICE is provided by
                   Sohel at no cost and is intended for use as
                   is.
                 </p> <p>
@@ -31,13 +32,15 @@
                   may require you to provide us with certain personally
                   identifiable information. The information that
                   I request will be retained on your device and is not collected by me in any way.
-                </p> <div><p>
+                </p> 
+                <!-- <div><p>
                     The app does use third-party services that may collect
                     information used to identify you.
                   </p> <p>
                     Link to the privacy policy of third-party service providers used
                     by the app
-                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
+                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank" rel="noopener noreferrer">AdMob</a></li></ul></div>  -->
+                  <p><strong>Log Data</strong></p> <p>
                   I want to inform you that whenever you
                   use my Service, in a case of an error in the app
                   I collect data and information (through third-party
